<resources>
    <string name="app_name" translatable="false">Reading Time</string>

    <!--SHARED PREFERENCES-->
    <string name="pref_last_book" translatable="false">PREF_LAST_BOOK</string>
    <string name="pref_last_millis" translatable="false">PREF_LAST_MILLIS</string>

    <string name="title_activity_book" translatable="false">BookActivity</string>

    <!--INTERNATIONALIZATION-->
    <string name="counter_start">Start</string>
    <string name="counter_pause">Pause</string>
    <string name="counter_resume">Resume</string>

    <string name="reading">Reading</string>
    <string name="num_pages">Number of Pages</string>
    <string name="book_name">Book Name</string>
    <string name="book_author">Author</string>
    <string name="book_artist">Artist</string>
    <string name="book_publisher">Publisher</string>
    <string name="book_page_stopped">Page Stopped</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="hours_read">Time Read</string>
    <string name="progress">Progress</string>
    <string name="upload_image">Upload Image</string>

    <!--BOOK CATEGORIES-->
    <string name="bookcategory_adventure">Adventure</string>
    <string name="bookcategory_fantasy">Fantasy</string>
    <string name="bookcategory_scify">Science-Fiction</string>
    <!--<string name="bookcategory_"></string>-->

    <!--BOOK TYPES-->
    <string name="booktype_book">Book</string>
    <string name="booktype_graphicnovel">Graphic Novel</string>
    <string name="booktype_manga">Manga</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
